tests/toylang/neg/000937_mutation.toylang
program a = { if a program a = { } . then sleep; } .
